[tool.poetry]
name = "IO_LOTTERYPB"
version = "0.1.0"
description = "Flask app"
authors = ["Przemyslaw Brzuzy"]
readme = "README.md"
packages = [{include = "IO_LOTTERYPB"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
